# Tiktok-Jampots

./: .env.example  .gitignore  README.md  dev-up.sh  docker-compose.yml  gw.json  resp.json  up_default.json  up_pg.json
configs/: img_blur.yaml
frontend/: upload-demo.html
prismchatbackend/: Dockerfile  docker-compose.yml  requirements.txt
prismchatbackend/app/: chain.py  db.py  main.py  schemas.py
prismchatfrontend/prismchat/: package-lock.json  package.json
prismchatfrontend/prismchat/src/: App.css  App.tsx  index.tsx
prismchatfrontend/prismchat/src/components/: ChatMessage.tsx  MessageInput.tsx  MessageList.tsx  RouteToggle.tsx  Sidebar.tsx
prismchatfrontend/prismchat/src/hooks/: useAutoScroll.ts
prismchatfrontend/prismchat/src/lib/: api.ts
prismchatfrontend/prismchat/src/types/: chat.ts
prismchatfrontend2/prismchat/: .gitignore  next.config.ts  package-lock.json  package.json
prismchatfrontend2/prismchat/src/app/: page.tsx
prismchatfrontend2/prismchat/src/components/: ChatMessage.tsx  MarkdownRenderer.tsx  MessageInput.tsx  MessageList.tsx  Sidebar.tsx  (+1 more)
prismguard_llm/: Dockerfile  app.py  requirements.txt
prismguard_llm/model/: config.json  tokenizer_config.json
prismguard_vision/: Dockerfile  app.py  wrapper.py
prismguard_vision/dashcam_anonymizer/: blur_images.py  blur_videos.py
sdk/: pyproject.toml
sdk/prismguard_anonymizer/: __init__.py  client.py  llm_bridge.py  vision_bridge.py
sdk/prismguard_anonymizer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
services/gateway/: Dockerfile  app.py  security.py  supabase_client.py
(+7 files in other folders)
