[project]
name = "prismguard-anonymizer"
version = "0.1.0"
description = "Client SDK for PrismGuard (Gateway + services)"
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["prismguard_anonymizer*"]
